--- a/InvisibleBattlefieldsClient/res/layout/activity_auth.xml
+++ b/InvisibleBattlefieldsClient/res/layout/activity_auth.xml
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.13"
-            android:text="@string/pass" />
+            android:text="@string/pass_login" />
 
         <EditText
             android:id="@+id/et_pass"
