--- a/InvisibleBattlefieldsClient/res/layout/activity_registry.xml
+++ b/InvisibleBattlefieldsClient/res/layout/activity_registry.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RegistrationScreen" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="@dimen/hugeBtnW"
         android:layout_height="@dimen/smallBtnH"
         android:layout_alignParentBottom="true"
-        android:text="@string/register" />
+        android:text="@string/register"
+        android:onClick="RegistrationRoutine" />
     
     <ScrollView
         android:id="@+id/scrollView1"
@@ -50,17 +50,33 @@
                 android:layout_height="wrap_content"
                 android:inputType="text" />
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="@dimen/textAndEditPaddingR"
-                android:text="@string/clan" />
-
-           <Spinner 
-               android:id="@+id/spClans"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
+                android:layout_height="wrap_content" >
+	            
+	            <TextView
+	                android:id="@+id/lblSpinner"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:paddingRight="@dimen/textAndEditPaddingR"
+	                android:text="@string/clan" />
+	
+	            <Spinner 
+	                android:id="@+id/spClans"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	        		android:layout_below="@id/lblSpinner" />
+	            
+	            <ImageButton
+	                android:id="@+id/btnClanDescription"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:src="@android:drawable/ic_dialog_info"
+	        		android:layout_toRightOf="@id/spClans"
+	        		android:layout_below="@id/lblSpinner"
+       				android:onClick="ShowClanDescriptionPopUp"  />
+			</RelativeLayout>
+			
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
