--- a/InvisibleBattlefieldsClient/res/layout/layout_pendingbattle.xml
+++ b/InvisibleBattlefieldsClient/res/layout/layout_pendingbattle.xml
@@ -27,7 +27,7 @@
 		    <TextView
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="Expires on: " />
+		        android:text="Expires at: " />
 		    
 		    <TextView android:id="@+id/lblRemainingTime"
 		        android:layout_width="wrap_content"
