--- a/InvisibleBattlefieldsClient/res/layout/activity_auth.xml
+++ b/InvisibleBattlefieldsClient/res/layout/activity_auth.xml
@@ -20,7 +20,7 @@
             android:layout_weight="0.13"
             android:text="@string/login" />
 
-        <EditText android:id="@+id/et_login"
+        <EditText android:id="@+id/etxt_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -51,7 +51,7 @@
             android:text="@string/pass_login" />
 
         <EditText
-            android:id="@+id/et_pass"
+            android:id="@+id/etxt_pass"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
