--- a/InvisibleBattlefieldsClient/res/layout/activity_registry.xml
+++ b/InvisibleBattlefieldsClient/res/layout/activity_registry.xml
@@ -33,7 +33,7 @@
                 android:text="@string/email" />
 
             <EditText
-                android:id="@+id/etEmail"
+                android:id="@+id/etxt_regemail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
@@ -45,7 +45,7 @@
                 android:text="@string/char_name" />
 
             <EditText
-                android:id="@+id/etCharName"
+                android:id="@+id/etxt_regcharname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -84,7 +84,7 @@
                 android:text="@string/pass_registry" />
 
             <EditText
-                android:id="@+id/etPass"
+                android:id="@+id/etxt_regpass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
